# AnonymousCode_CHS

./: .gitignore  README.md  run.bat
Tools/: README.md  SQuirrelCNut.bt
data/: Cargo.toml  build.rs  justfile
data/cxx/: utils
data/scripts/: zlib_decompress.py
data/src/: data.rs  kpack.rs  lib.rs
data/src/data/: context.rs  helper.rs  mdf.rs  mod.rs  resource.rs
data/src/data/psb/: array.rs  entry.rs  header.rs  mod.rs  names.rs  resource.rs
data/src/data/psb/data/: dict.rs  list.rs  mod.rs  number.rs
data/src/utils/: consts.rs  file_lists.rs  mod.rs
launcher/: CMakeLists.txt  config.cpp  config.h  dll.cpp  justfile  launcher.cpp
launcher/hooks/: createwindowexa.hpp  findentry.hpp  getfilesizeex.hpp  hookbase.h  media.hpp  movieplay.hpp  readdisk.hpp  readfile.hpp
launcher/hooks/data/: data.h
launcher/utils/: kutils.cpp  kutils.h  log.cpp  log.h  log.hpp
