[package]
name = "anonymouscode_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kpack"
path = "src/bin/kpack.rs"

[lib]
name = "data"
crate-type = ["cdylib", "lib"]
bench = false
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
cxx = { version = "1.0.107", features = ["c++20", "c++14", "c++17"] }
binrw = "0.11.2"
nom = "7.1.3"
md-5 = "0.10.5"
bytes = "1.5.0"
encoding_rs = "0.8.33"
hex-literal = "0.4.1"
byteorder = "1.4.3"
rand_mt = "4.2.2"
derivative = "2.2.0"
dbg_hex = "0.1.1"
flate2 = { version = "1.0.27", features = ["zlib-ng"] }
valued-enums = "1.1.9"
itertools = "0.11.0"
num-traits = "0.2.16"
clap = { version = "4.4.4", features = ["derive"] }


[workspace.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
]

